css/style.css
:root {
    --org: rgb(202, 100, 16);
    --blue: #094D84;
    --white: #ffffff;
    --gray-l: rgb(105, 103, 103);
    --gray-d: rgb(59, 59, 59);
}

body {
    /* background-image: linear-gradient(#8300AA, #D33B36); */
    background-color: #D33B36;
    /* background-color: #FC6226; */
    color: white;
}

.mars-background {
    background-image: url("../img/SVG/mars-background.svg");
    border: none;
    width: 100%;
    padding: 70px;
    margin-top: 3px;
    margin-bottom: 12px;
    /* background-image: inherit; */
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

.title-text {
    text-align: center;
    margin-top: 25px;
    font-size: 45px;
}

.background {
    top: -70px;
    position: relative;
    z-index: -1;
}

.button-group {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
    margin-top: -50px;
}

.button {
    background: #8300AA;
    color: white;
    padding: 10px;
    border-radius: 10px;
    border: 0;
}

.button:hover {
    background: #FC6226;
}

/* Model styling */
.modal {
    display: none;
    position: fixed;
    z-index: 2;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.5)
}

.modal-content {
    background-color: rgb(44, 54, 59);
    margin: 15% auto;
    padding: 20px;
    width: 85%;
    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2) 0 7px 20px 0 rgba(0,0,0,0.17);
    border-radius: 10px;
    animation-name: modalOpen;
    animation-duration: 1.5s;
}

.modal-header {
    margin-bottom: 8px;
}

.closeBtn {
    color: white;
    float: right;
    font-size: 30px;
}

.closeBtn:hover, .closeBtn:focus {
    color: #8300AA;
    text-decoration: none;
    cursor: pointer;

}

@keyframes modalOpen {
    from {opacity: 0}
    to {opacity: 1}
}


/* API image styling */
.modal-api {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#title {
    font-size: 30px;
    margin: 10px;
}

#date {
    font-size: 20px;
    margin: 5px 0 10px 0;
}

#picture {
   width: 95%;
}

#explanation {
    margin-top: 25px;
    text-align: center;
    font-size: 18px;
}


@media screen and (max-width: 856px) {
    .title-text {
      font-size: 25px;
      margin-top: 15px;
    }
    
    .background {
        top: -50px;
    }

    #title {
        font-size: 22px;
        margin: 15 0 0 0px;   
    }

    #explanation {
        margin-top: 25px;
        font-size: 15px;
    }

    .button-group {
        margin-top: -30px;
    }

  }

